motherfucker onboarding fuckign issue fuck

--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ a:link {
   text-decoration: none;
 }
 
+#content {
+  min-height: 500px;
+  min-width: 300px;
+}
+
 a:link,
 a:visited {
   /* color: #0366d6; */
